# clustRX

./: .gitignore  README.md  pyproject.toml
clustrx/: cli.py  clustrx.py
examples/: hits.txt  queries.txt
tests/: test_clustering.py
